--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     line-height: 1.6;
     color: #333;
     padding-bottom: 80px;
+    background-image: url(img/banner.png);
 }
 
 header {
@@ -22,6 +23,10 @@ header {
     position: sticky;
     top: 0;
     z-index: 1000;
+}
+
+main {
+    background-image: url('img/banner.png');
 }
 
 .logo-img {
